장바구니테스트까지 완료